# lol-arena

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github_ci_pending/: ci.yml
arena_sim/: cli.py
arena_sim/api/: __init__.py  server.py
arena_sim/data/: __init__.py  client.py  enrich_augments.py  enrich_items.py  load_abilities.py  scrape_augments.py  scrape_champions.py  scrape_items.py  scrape_runes.py  sources.py
arena_sim/dps/: __init__.py  ability.py  auto.py  compare.py  damage.py  dummies.py  item_passives.py
arena_sim/models/: __init__.py  augment.py  champion.py  coefficients.py  item.py  rune.py
arena_sim/modes/: __init__.py  mode.py
arena_sim/stats/: __init__.py  build.py  computed.py
data/abilities/: Aatrox.json  Ahri.json  Akali.json  Akshan.json  Alistar.json  Ambessa.json  Amumu.json  Anivia.json  Annie.json  Aphelios.json  Ashe.json  AurelionSol.json  Aurora.json  Azir.json  Bard.json  Belveth.json  Blitzcrank.json  Brand.json  Braum.json  Briar.json  Caitlyn.json  Camille.json  Cassiopeia.json  Chogath.json  Corki.json  Darius.json  Diana.json  DrMundo.json  Draven.json  Ekko.json  Elise.json  Evelynn.json  Ezreal.json  Fiddlesticks.json  Fiora.json  Fizz.json  Galio.json  Gangplank.json  Garen.json  Gnar.json  (+132 more)
data/abilities/urf/: Yasuo.json
scripts/: generate_ability_skeletons.py
tests/: test_ability_dps.py  test_api.py  test_build.py  test_champion_stats.py  test_dps.py  test_enrich_augments.py  test_enrich_items.py  test_item_passives.py  test_mode_ability_override.py  test_models.py  test_modes.py  test_scrape_parsers.py
