[project]
name = "arena-sim"
version = "1.0.0"
description = "LoL theorycrafting toolkit for Summoner's Rift, Arena, and URF"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "respx>=0.21",
    "httpx>=0.27",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.scripts]
arena = "arena_sim.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arena_sim"]

[tool.ruff]
line-length = 100
target-version = "py311"
